[package]
name = "wireguard-vanity-address"
version = "0.3.1-alpha.0"
edition = "2018"
authors = ["Brian Warner <warner@lothar.com>"]
description = "Find Wireguard VPN keypairs with a specific readable string"
license = "MIT"
readme = "README.md"
categories = ["cryptography"]
documentation = "https://docs.rs/wireguard-vanity-address"
homepage = "https://github.com/warner/wireguard-vanity-address"
repository = "https://github.com/warner/wireguard-vanity-address"
exclude = [
    "**/.gitignore",
    ".gitignore",
]

[badges]
travis-ci = { repository = "warner/wireguard-vanity-address" }

[dependencies]
rayon = "1.0"
base64 = "0.10"
rand = "0.6.0"
x25519-dalek = "0.5.1"
