[package]
name = "wireguard-vanity-address"
version = "0.4.0"
edition = "2018"
authors = ["Brian Warner <warner@lothar.com>"]
description = "Find Wireguard VPN keypairs with a specific readable string"
license = "MIT"
readme = "README.md"
categories = ["cryptography"]
documentation = "https://docs.rs/wireguard-vanity-address"
homepage = "https://github.com/warner/wireguard-vanity-address"
repository = "https://github.com/warner/wireguard-vanity-address"
exclude = [
    "**/.gitignore",
    ".gitignore",
]

[badges]
travis-ci = { repository = "warner/wireguard-vanity-address" }

[dependencies]
clap = "~2.33.0"
rayon = "1.0"
base64 = "0.10"
rand = "0.6.0"
x25519-dalek = "0.5.1"
num_cpus = "1.0"

[dev-dependencies]
bencher = "0.1"

[lib]
name = "wireguard_vanity_lib"
path = "src/lib.rs"

[[bin]]
name = "wireguard-vanity-address"
path = "src/bin.rs"

[[bench]]
name = "keygen"
harness = false
